--- a/components/breadcrumbs/breadcrumbs.module.css
+++ b/components/breadcrumbs/breadcrumbs.module.css
@@ -6,17 +6,30 @@
   margin-bottom: 1rem;
 }
 
-.breadcrumb__link {
+.breadcrumb__links {
   display: flex;
   align-items: center;
 }
 
-.breadcrumb__link a {
+.breadcrumb__links a {
   display: inline-flex;
   align-items: center;
 }
 
-.breadcrumb__link span {
+.breadcrumb__links .breadcrumb__shop {
+  padding-bottom: 1px;
+  transition: text-decoration .4s linear;
+}
+
+.breadcrumb__links .breadcrumb__home:hover {
+  background-color: var(--footer-color);
+}
+
+.breadcrumb__links .breadcrumb__shop:hover {
+  text-decoration: underline;
+}
+
+.breadcrumb__links span {
   margin: 0 4px;
 }
 
@@ -24,7 +37,7 @@
   .breadcrumb {
     font-size: 0.75rem;
   }
-  .breadcrumb__link svg {
+  .breadcrumb__links svg {
     width: 16px;
     height: 16px;
   }
