--- a/components/products-card/products-card.module.css
+++ b/components/products-card/products-card.module.css
@@ -5,6 +5,7 @@
 }
 
 .cards__list {
+  position: relative;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -139,7 +140,7 @@
   text-align: center;
 }
 
-@media (min-width: 78.125rem) and (max-width: 119.9994rem) {
+@media (min-width: 1250px) and (max-width: 119.9994rem) {
   .cards__list {
     gap: 5.3125rem;
   }
@@ -231,15 +232,25 @@
     border-radius: 2.8125rem;
   }
   .cards__name {
+    display: flex;
     padding: 1.625rem 0.875rem;
     font-size: 3rem;
     border-radius: 2.8125rem;
   }
 }
 
-@media (min-width: 46.5rem) and (max-width: 55.4994rem) {
+/* @media (min-width: 46.5rem) and (max-width: 55.4994rem) {
   .cards__list {
-    gap: 2.75rem;
+    gap: 2.75rem;    
+    overflow-y: hidden;
+    overflow-x: auto;
+  }
+  .cards__list::-webkit-scrollbar {
+    height    : 1px;
+    background: transparent;
+  }  
+  .cards__list::-webkit-scrollbar-thumb {
+    background: transparent;
   }
   .cards__item {
     width: 11.0625rem;
@@ -270,94 +281,155 @@
     font-size: 2.25rem;
     border-radius: 2.8125rem;
   }
-}
+} */
 
-@media (min-width: 40.3125rem) and (max-width: 46.4994rem) {
+@media (min-width: 42.5rem) and (max-width: 55.4994rem) {
   .cards {
     padding: 2rem 0;
   }
   .cards__list {
+    position: relative;
+    height: 650px;
     align-items: center;
-    gap: 32px;
+    overflow-y: hidden;
+    overflow-x: auto;
+  }
+  .cards__list::-webkit-scrollbar {
+    height    : 1px;
+    opacity: 0;
+    transform: translate(0);
+    background: var(--footer-color);
+  }  
+  .cards__list::-webkit-scrollbar-thumb {
+    background: transparent;
   }
   .cards__item {
-    width: 177px;
-    height: 177px;
+    position: absolute;
+    width: 250px;
+    height: 250px;
     border-radius: 45px;
   }
-  .cards__list [data-index='3'] {
-    width: 177px;
-    height: 266px;
+  .cards__list .cards__item[data-index='0'] {
     top: 0;
+    left: 15%;
+  }
+  .cards__list .cards__item[data-index='1'] {
+    top: 25px;
+    left: 80%;
+  }
+  .cards__list .cards__item[data-index='2'] {
+    width: 250px;
+    height: 320px;
+    top: 0;
+    left: 130%;
+  }
+  .cards__list .cards__item[data-index='3'] {
+    width: 250px;
+    height: 320px;
+    top: auto;
+    bottom: 0%;
+    left: 35%;
   }  
-  .cards__list [data-index='2'] {
-    width: 177px;
-    height: 266px;
+  .cards__list .cards__item[data-index='4'] {
+    top: auto;
+    bottom: 10%;
+    left: 90%;
   }
-  .cards__list [data-index='4'] {
-    top: 0px;
-    /* display: none; */
+  .cards__list .cards__item[data-index='5'] {
+    top: auto;
+    bottom: 5%;
+    left: 150%;
   }
-  .cards__list [data-index='5'] {
-    display: none;
-  }
-  .cards__list [data-index='6'] {
-    top: 0px;
+  .cards__list .cards__item[data-index='6'] {
+    top: 20%;
+    left: 190%;
   }
   .cards__item img {
     object-fit: cover;
     border-radius: 2.8125rem;
   }
   .cards__name {
+    display: flex;
     padding: 1.625rem 0.875rem;
     font-size: 2.25rem;
     border-radius: 2.8125rem;
   }
 }
 
-@media (min-width: 27.1875rem) and (max-width: 40.3119rem) {
+@media (min-width: 20rem) and (max-width: 42.4994rem) {
   .cards {
     padding: 2rem 0;
   }
   .cards__list {
+    position: relative;
+    height: 480px;
     align-items: center;
-    gap: 2rem;
+    overflow-y: hidden;
+    overflow-x: auto;
+  }
+  .cards__list::-webkit-scrollbar {
+    height    : 1px;
+    opacity: 0;
+    transform: translate(0);
+    background: var(--footer-color);
+  }  
+  .cards__list::-webkit-scrollbar-thumb {
+    background: transparent;
   }
   .cards__item {
-    width: 11.0625rem;
-    height: 11.0625rem;
-    border-radius: 2.8125rem;
+    position: absolute;
+    width: 177px;
+    height: 177px;
+    border-radius: 45px;
   }
-  .cards__list [data-index='3'] {
-    width: 11.0625rem;
-    height: 16.625rem;
+  .cards__list .cards__item[data-index='0'] {
     top: 0;
+    left: 10%;
+  }
+  .cards__list .cards__item[data-index='1'] {
+    top: 25px;
+    left: 80%;
+  }
+  .cards__list .cards__item[data-index='2'] {
+    width: 177px;
+    height: 266px;
+    top: 0;
+    left: 155%;
+  }
+  .cards__list .cards__item[data-index='3'] {
+    width: 177px;
+    height: 266px;
+    top: auto;
+    bottom: 0%;
+    left: 20%;
   }  
-  .cards__list [data-index='2'] {
-    display: none;
+  .cards__list .cards__item[data-index='4'] {
+    top: auto;
+    bottom: 10%;
+    left: 90%;
   }
-  .cards__list [data-index='4'] {
-    top: 0rem;
-    display: none;
+  .cards__list .cards__item[data-index='5'] {
+    top: auto;
+    bottom: 0%;
+    left: 170%;
   }
-  .cards__list [data-index='5'] {
-    display: none;
-  }
-  .cards__list [data-index='6'] {
-    top: 0rem;
+  .cards__list .cards__item[data-index='6'] {
+    top: 20%;
+    left: 230%;
   }
   .cards__item img {
     object-fit: cover;
     border-radius: 2.8125rem;
   }
   .cards__name {
+    display: flex;
     padding: 1.625rem 1.375rem;
     font-size: 2.25rem;
     border-radius: 2.8125rem;
   }
 }
 
-@media (min-width: 20rem) and (max-width: 27.1869rem) {
+/* @media (min-width: 20rem) and (max-width: 27.1869rem) {
   .cards {
     min-height: 31.9rem;
     padding: 2rem 0;
@@ -407,8 +479,9 @@
     border-radius: 2.8125rem;
   }
   .cards__name {
+    display: flex;
     padding: 1.625rem 1.375rem;
     font-size: 2.25rem;
     border-radius: 2.8125rem;
   }
-}
+} */
