--- a/app/shop/shop.module.css
+++ b/app/shop/shop.module.css
@@ -6,7 +6,11 @@
 .shop__content {
   display: flex;
   flex-direction: row;
-  /* justify-content: center; */
-  gap: 2.125rem;
-  padding: 2.7rem 0;
+  gap: 2rem;
+}
+
+@media (max-width: 1919.99px) {
+  .shop__content {
+    gap: 0.5rem;
+  }
 }
