--- a/components/profile/profile.module.css
+++ b/components/profile/profile.module.css
@@ -1,22 +1,19 @@
 .profile {
   display: flex;
 }
-
 .profile__button{
   width: 3rem;
   height: 3rem;
   padding: 0;
   border: 0;
 }
-
 .profile__button img {
   background: transparent;
 
   transition: background 0.6s ease-in-out;
 }
-
 .profile__button:hover img {
-  background: url('/images/header/profile_icon_40.png') center/ contain no-repeat;
+  background: url('/images/header/profile-hover.svg') center/ contain no-repeat;
 }
 
 @media (max-width: 62.5rem) {
