--- a/components/count/count.module.css
+++ b/components/count/count.module.css
@@ -6,8 +6,8 @@
   justify-content: space-between;
 }
 
-.minus,
-.plus {
+.count .minus,
+.count .plus {
   width: 1.875rem;
   height: 1.875rem;
   background-color: var(--accent);
@@ -16,9 +16,15 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  transition: background-color .4s ease-in-out;
 }
 
-.minus:disabled {
+.count .minus:hover,
+.count .plus:hover {
+  background-color: var(--footer-color);
+}
+
+.count .minus:disabled {
   background-color: var(--grey);
   cursor: not-allowed;
 }
@@ -33,13 +39,13 @@
     width: 5rem;
     height: 1.25rem;
   }
-  .minus,
-  .plus {
+  .count .minus,
+  .count .plus {
     width: 1.25rem;
     height: 1.25rem;
   }
-  .minus svg,
-  .plus svg {
+  .count .minus svg,
+  .count .plus svg {
     width: 1rem;
     height: 1rem;
   }
