--- a/components/order-goods/order-goods.module.css
+++ b/components/order-goods/order-goods.module.css
@@ -1,4 +1,4 @@
-/* .good {
+.good {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -145,4 +145,4 @@
     width: 1.5rem;
     height: 1.5rem;
   }
-} */
+}
