--- a/app/order/order.module.css
+++ b/app/order/order.module.css
@@ -1,4 +1,4 @@
-.modal {
+/* .modal {
   position: fixed;
   inset: 0;
   background-color: rgba(0, 0, 0, 0.8);
@@ -37,7 +37,7 @@
   max-width: 684px;
   min-height: auto;
   padding: 16px 24px;
-  /* padding: 32px 10px; */
+  /* padding: 32px 10px; 
   display: flex;
 }
 
@@ -211,7 +211,7 @@
 .item__img img {
   position: relative !important;
   object-fit: cover;
-}
+} */
 
 /* @media (min-width: 480px) {
   .modal {
@@ -278,3 +278,19 @@
     font-size: 16px;
   }
 } */
+
+.order {
+  font-family: PoppinsS;
+
+  background-color: white;
+  color: #131313;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  /* padding-left: 162px;
+  padding-right: 162px; */
+  width: 1920px;
+  display: flex;
+}
