--- a/components/order-user/order-user.module.css
+++ b/components/order-user/order-user.module.css
@@ -298,8 +298,19 @@
 }
 
 .input {
-  width: 24px;
-  height: 24px;
+  width: 462px;
+  border-radius: 8px;
+  height: 32px;
+
+  padding-left: 8px;
+  padding-right: 8px;
+
+  border: 1px solid #575757;
+
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .header_delivery {
