Rename classes of order table in Profile

--- a/app/profile/components/order/table/table.module.css
+++ b/app/profile/components/order/table/table.module.css
@@ -3,13 +3,11 @@
   border-collapse: collapse;
   color: var(--black);
   table-layout: fixed;
-  /* overflow-y: auto; */
 }
 
-.thead {
+.headerTable {
   display: table;
   width: 100%;
-  /* table-layout: fixed; */
 }
 
 .tbodyWrapper {
@@ -19,13 +17,7 @@
   width: 100%;
 }
 
-/* .tbody {
-  display: block;
-  max-height: 300px;
-  overflow-y: auto;
-  width: 100%;
-} */
-.th, .td {
+.rowCellHeader, .rowCellTable {
   text-align: left;
   padding: 8px;
   border-bottom: 1px solid var(--grey);
@@ -33,17 +25,17 @@
   font-weight: 500;
 }
 
-.td:nth-child(1), .th:nth-child(1) {
+.rowCellTable:nth-child(1), .rowCellHeader:nth-child(1) {
 width: 280px;
 }
 
 
 
-.th {
+.rowCellHeader {
   font-weight: 600;
 }
 
-.tr {
+.rowTable {
   width: 100%;
 }
 
