--- a/app/order/order.module.css
+++ b/app/order/order.module.css
@@ -7,22 +7,73 @@
 
 .container {
   margin: 0 auto;
-  padding-left: 162px;
-  padding-right: 162px;
-  width: 1920px;
 }
 
-.header {
-  margin-bottom: 39px;
-  font-family: var(--font);
-  color: var(--black);
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  text-transform: uppercase;
+@media screen and (min-width: 360px) {
+  .container {
+    padding-left: 16px;
+    padding-right: 16px;
+    width: 360px;
+  }
+}
+
+@media screen and (min-width: 744px) {
+  .container {
+    width: 744px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    width: 1440px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .container {
+    padding-left: 162px;
+    padding-right: 162px;
+    width: 1920px;
+  }
 }
 
 .header_container {
   display: flex;
+  gap: 23px;
+  margin-bottom: 34px;
+}
+
+@media screen and (min-width: 744px) {
+  .header_container {
+    margin-bottom: 33px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header_container {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .header_container {
+    margin-bottom: 39px;
+  }
+}
+
+.header {
+  font-family: var(--font);
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+
+  color: var(--black);
+}
+
+@media screen and (min-width: 744px) {
+  .header {
+    font-size: 40px;
+  }
 }
